--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                     <ul>
                         <li><a href="#">Movies</a></li>
                         <li><a href="#">TV Shows</a></li>
+                        <li><a href="#">TV Shows</a></li>
                         <li><a href="#">Reality</a></li>
+                        <li><a href="#">Top IMDB</a></li>
+                        <li><a href="#">Top IMDB</a></li>
                         <li><a href="#">Top IMDB</a></li>
                     </ul>
                 </div>
